# AI-Driven-Log-Anonymization

./: .$architecture diagram.drawio.bkp  architecture diagram.drawio  read-me.md  start.bat
back-end/: pyproject.toml  test.py
back-end/services/: AnonymizeService.py  anonymize_service.py
back-end/src/: main.py
back-end/src/api/: routes.py
front-end/: package-lock.json
front-end/routes/: Anonymiz.tsx
front-end/src/: App.css  App.tsx  index.css  main.tsx
